# RayTracing

./: Build.py  BuildDebug.py  CMakeLists.txt  readme.md
Application/: CMakeLists.txt
Application/include/Application/: Test.h
Application/libs/SDL3/lib/: SDL3.lib
Application/libs/SDL3/lib/pkgconfig/: sdl3.pc
Application/libs/SDL_ttf/lib/: SDL3_ttf.lib
Application/src/: Main.cpp
Application/src/Application/: Test.cpp
RayTracing/: RayTraceMain.java
RayTracing/RayTracingPackages/: Camera.java  Color.java  Display.java  Ellipse.java  Plane.java  Point.java  Sphere.java  Vector.java  World.java
Shader/: CMakeLists.txt
Shader/include/interface/Shader/: Shader.h  Shader_Constants.cuh  Shader_Logging.h  Shader_ResourceManager.h  Shader_Settings.h  Shader_Structs.cuh  Shader_Timer.h  Shader_World.h
Shader/include/internal/Shader/: Shader_DeviceMemory.cuh  Shader_FileCatalog.h  Shader_HostMemory.h  Shader_Log.h
Shader/src/interface/: Shader.cpp  Shader_Logging.cpp  Shader_ResourceManager.cpp  Shader_Settings.cpp  Shader_World.cpp
Shader/src/internal/: Shader_Constants.cu  Shader_FileCatalog.cpp  Shader_HostMemory.cpp
include/RayTracing/: Display.h  ProgramManager.h  Shader.cuh  ShaderStructs.cuh  VectorMath.cuh
libs/SDL3/cmake/: SDL3headersTargets.cmake
libs/SDL3/include/SDL3/: SDL_revision.h
libs/SDL3/lib/: SDL3_test.lib
libs/SDL_ttf/cmake/: SDL3_ttf-shared-targets.cmake  SDL3_ttfConfig.cmake
libs/SDL_ttf/lib/pkgconfig/: sdl3-ttf.pc
src/: Main.cpp
src/RayTracing/: Display.cpp  ProgramManager.cpp  Shader.cu
